--- a/sass/preloader.css
+++ b/sass/preloader.css
@@ -10,8 +10,16 @@
 #preloader {
     display: none;
 }
+.loader h2 {
+    left: 50%;
+    color: #000;
+    transform: translateX(-50%);
+    position: absolute;
+    top: 30%;
+    text-align: center;
+}
 body,html{}
-.preloader{margin:0;background:rgba(246,179,97, 0.5); height: 100vh; width: 100vw;}
+.preloader{margin:0;background:rgba(246,179,97, 0.9); height: 100vh; width: 100vw;}
 .loader{height:100%;width:100%}
 .loader .l_main{position:absolute;top:50%;left:50%;width:172px;height:128px;margin:0;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%)}
 @media (max-width:550px){.loader{-webkit-transform:scale(0.75);transform:scale(0.75)}}
